--- a/public/index.html
+++ b/public/index.html
@@ -1,13 +1,54 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Woma App</title>
-</head>
-<body>
+  </head>
+  <style>
+    * {
+      padding: 0;
+      margin: 0;
+      text-decoration: none;
+      list-style-type: none;
+      box-sizing: border-box;
+    }
+
+    body {
+      background-color: rgb(8, 8, 41);
+      color: white;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      justify-content: center;
+      gap: 0.5em;
+      height: 100vh;
+      font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI",
+        Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue",
+        sans-serif;
+    }
+    button {
+      width: auto;
+      padding: 10px 20px;
+      background-color: rgb(2, 2, 160);
+      border-radius: 3px;
+      color: white;
+      border: none;
+      cursor: pointer;
+    }
+
+    a {
+      color: inherit;
+      text-align: center;
+    }
+  </style>
+  <body>
     <h1>Welcome to Woma.py</h1>
     <p>Woma.py, A Python Frontend Framework!</p>
-</body>
+    <br />
+    <button>
+      <a href="https://womapy.com">Go to docs</a>
+    </button>
+  </body>
 </html>
